kyverno-policies/mirantis-kyverno-policies/kyverno-privileged/kyverno-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: visa-privileged
  annotations:
    policies.kyverno.io/title: visaprivileged
    policies.kyverno.io/category: Visa-Custom
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.10.3
    kyverno.io/kubernetes-version: "1.23-1.26"
    policies.kyverno.io/description: >-
      Custom Policy for privileged access deployment at Visa
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: securityContext-hostlevelvalidation
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - calico-system
              - istio-*
              - kube-system
              - prometheus-operator
              - tigera-*
      validate:
        message: >-
          Policy for privileged Access.        
        pattern:
          spec:            
            =(hostNetwork): true
            =(hostIPC): true
            =(hostPID): true  
            securityContext:
              runAsUser: "*"
              fsGroup: "*"
              supplementalGroups: "*"  
            =(ephemeralContainers):          
              securityContext:
                =(allowPrivilegeEscalation): "true|false"  
                =(privileged): "true|false"
                seLinuxOptions:
                  level: "?*"
              =(ports): 
               - =(hostPort): '0-65535'
            =(initContainers):          
              securityContext:
                =(allowPrivilegeEscalation): "true|false"  
                =(privileged): "true|false"
                seLinuxOptions:
                  level: "?*"
              =(ports): 
               - =(hostPort): '0-65535'
            containers:          
            - securityContext:
                =(allowPrivilegeEscalation): "true|false"  
                =(privileged): "true|false"
                seLinuxOptions:
                  level: "?*"          
              =(ports): 
               - =(hostPort): '0-65535'
